feat(molecule): add event-sourcing impl.